# parliai-public

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: theyworkforyou.py
src/parliai_public/: __init__.py  dates.py
src/parliai_public/_config/: base.toml  debates.toml  wrans.toml
src/parliai_public/readers/: __init__.py  base.py  theyworkforyou.py
tests/: __init__.py  common.py  test_dates.py  test_placeholder.py
tests/readers/: __init__.py  test_creation.py
tests/readers/base/: __init__.py  strategies.py  test_examples.py  test_reader.py
tests/readers/theyworkforyou/: __init__.py  strategies.py  test_debates.py  test_examples.py  test_written.py
